--- a/mail/PHPMailer/composer.json
+++ b/mail/PHPMailer/composer.json
@@ -19,43 +19,58 @@
             "name": "Brent R. Matzelle"
         }
     ],
+    "funding": [
+        {
+            "url": "https://github.com/Synchro",
+            "type": "github"
+        }
+    ],
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
+    },
     "require": {
+        "php": ">=5.5.0",
         "ext-ctype": "*",
-        "php": ">=5.0.0"
+        "ext-filter": "*",
+        "ext-hash": "*"
     },
     "require-dev": {
-        "doctrine/annotations": "1.2.*",
-        "jms/serializer": "0.16.*",
-        "phpdocumentor/phpdocumentor": "2.*",
-        "phpunit/phpunit": "4.8.*",
-        "symfony/debug": "2.8.*",
-        "symfony/filesystem": "2.8.*",
-        "symfony/translation": "2.8.*",
-        "symfony/yaml": "2.8.*",
-        "zendframework/zend-cache": "2.5.1",
-        "zendframework/zend-config": "2.5.1",
-        "zendframework/zend-eventmanager": "2.5.1",
-        "zendframework/zend-filter": "2.5.1",
-        "zendframework/zend-i18n": "2.5.1",
-        "zendframework/zend-json": "2.5.1",
-        "zendframework/zend-math": "2.5.1",
-        "zendframework/zend-serializer": "2.5.*",
-        "zendframework/zend-servicemanager": "2.5.*",
-        "zendframework/zend-stdlib": "2.5.1"
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
+        "doctrine/annotations": "^1.2",
+        "php-parallel-lint/php-console-highlighter": "^1.0.0",
+        "php-parallel-lint/php-parallel-lint": "^1.3.2",
+        "phpcompatibility/php-compatibility": "^9.3.5",
+        "roave/security-advisories": "dev-latest",
+        "squizlabs/php_codesniffer": "^3.6.2",
+        "yoast/phpunit-polyfills": "^1.0.0"
     },
     "suggest": {
-        "league/oauth2-google": "Needed for Google XOAUTH2 authentication"
+        "ext-mbstring": "Needed to send email in multibyte encoding charset or decode encoded addresses",
+        "hayageek/oauth2-yahoo": "Needed for Yahoo XOAUTH2 authentication",
+        "league/oauth2-google": "Needed for Google XOAUTH2 authentication",
+        "psr/log": "For optional PSR-3 debug logging",
+        "stevenmaguire/oauth2-microsoft": "Needed for Microsoft XOAUTH2 authentication",
+        "symfony/polyfill-mbstring": "To support UTF-8 if the Mbstring PHP extension is not enabled (^1.2)"
     },
     "autoload": {
-        "classmap": [
-            "class.phpmailer.php",
-            "class.phpmaileroauth.php",
-            "class.phpmaileroauthgoogle.php",
-            "class.smtp.php",
-            "class.pop3.php",
-            "extras/EasyPeasyICS.php",
-            "extras/ntlm_sasl_client.php"
-        ]
+        "psr-4": {
+            "PHPMailer\\PHPMailer\\": "src/"
+        }
     },
-    "license": "LGPL-2.1"
+    "autoload-dev": {
+        "psr-4": {
+            "PHPMailer\\Test\\": "test/"
+        }
+    },
+    "license": "LGPL-2.1-only",
+    "scripts": {
+        "check": "./vendor/bin/phpcs",
+        "test": "./vendor/bin/phpunit --no-coverage",
+        "coverage": "./vendor/bin/phpunit",
+        "lint": [
+            "@php ./vendor/php-parallel-lint/php-parallel-lint/parallel-lint . --show-deprecated -e php,phps --exclude vendor --exclude .git --exclude build"
+        ]
+    }
 }
